--- a/Grupo_L-war/src/main/webapp/LeerCentro.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerCentro.xhtml
@@ -19,9 +19,6 @@
 		<h:button value="INICIO" outcome="Principal.xhtml" />
 	</div>
 	
-	<ui:fragment rendered="#{not empty infoSesion.alumno}">
-	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.alumno.nombre}"/>.</p></div>
-	</ui:fragment>
 	<ui:fragment rendered="#{not empty infoSesion.personal}">	
 	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.personal.rango}"/>.</p></div>
 	</ui:fragment>
@@ -31,34 +28,34 @@
 	</h:form>
 	
 	<h1 class="titulo"> Leer Centro </h1>
-	<div class="centrado">
+	<div id = "tabla" class="centrado">
 		<h:form id="centro">
             <p:commandButton value="Mostar" actionListener="#{centroBB.centro}" update="dtCentro" />
 
 		<p:dataTable id="dtCentro" value="#{centroBB.centro}" var="c">
 		
 			
-			<p:column headerText="ID" filterBy="#{c.ID}"
+			<p:column id = "id" headerText="ID" filterBy="#{c.ID}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{c.ID}" />
 			</p:column>
 			
-			<p:column headerText="Nombre" filterBy="#{centro.nombre}"
+			<p:column id = "nombre" headerText="Nombre" filterBy="#{centro.nombre}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{c.nombre}" />
 			</p:column>
 			
-			<p:column headerText="Direccion" filterBy="#{centro.direccion}"
+			<p:column id = "direccion" headerText="Direccion" filterBy="#{centro.direccion}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{c.direccion}" />
 			</p:column>
 			
-			<p:column headerText="TLF_Conserjeria" filterBy="#{centro.TLF_Conserjeria}"
+			<p:column id = "telefono" headerText="TLF_Conserjeria" filterBy="#{centro.TLF_Conserjeria}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{c.TLF_Conserjeria}" />
 			</p:column>
 			
-			<p:column headerText="Titulacion" filterBy="#{centro.TC}"
+			<p:column id = "titulacion" headerText="Titulacion" filterBy="#{centro.TC}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{c.TC}" />
 			</p:column>
