--- a/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
@@ -30,7 +30,7 @@
 	<h1 class="titulo"> Expediente </h1>
 
 	<ui:fragment rendered="#{not empty infoSesion.alumno}">	
-		<div class="izquierda"   >
+		<div id="a" class="izquierda"   >
 			<b>MIS DATOS </b><br></br><br></br> 
 			<a href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
 			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
@@ -53,52 +53,52 @@
 
 		<p:dataTable id="dtExpediente" value="#{expedienteBB.expediente}" var="e">
 		
-			<p:column headerText="Num_Expediente" filterBy="#{e.num_Expediente}"
+			<p:column id="b" headerText="Num_Expediente" filterBy="#{e.num_Expediente}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.num_Expediente}" />
 			</p:column>
 			
-			<p:column headerText="Activo" filterBy="#{e.activo}"
+			<p:column id="c" headerText="Activo" filterBy="#{e.activo}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.activo}" />
 			</p:column>
 			
-			<p:column headerText="Nota_Media" filterBy="#{e.nota_Media}"
+			<p:column id="d" headerText="Nota_Media" filterBy="#{e.nota_Media}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.nota_Media}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_Superados" filterBy="#{e.creditos_Superados}"
+			<p:column id="e" headerText="Creditos_Superados" filterBy="#{e.creditos_Superados}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_Superados}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_FB" filterBy="#{e.creditos_FB}"
+			<p:column id="f" headerText="Creditos_FB" filterBy="#{e.creditos_FB}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_FB}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_OB" filterBy="#{e.creditos_OB}"
+			<p:column id="h" headerText="Creditos_OB" filterBy="#{e.creditos_OB}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_OB}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_OP" filterBy="#{e.creditos_OP}"
+			<p:column id="i" headerText="Creditos_OP" filterBy="#{e.creditos_OP}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_OP}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_CF" filterBy="#{e.creditos_CF}"
+			<p:column id="j" headerText="Creditos_CF" filterBy="#{e.creditos_CF}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_CF}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_PE" filterBy="#{e.creditos_PE}"
+			<p:column id="k" headerText="Creditos_PE" filterBy="#{e.creditos_PE}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_PE}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_TF" filterBy="#{e.creditos_TF}"
+			<p:column id="l" headerText="Creditos_TF" filterBy="#{e.creditos_TF}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_TF}" />
 			</p:column>
@@ -123,52 +123,52 @@
 
 		<p:dataTable id="dtExpediente" value="#{expedienteBB.expedientes}" var="e">
 		
-			<p:column headerText="Num_Expediente" filterBy="#{e.num_Expediente}"
+			<p:column id="m" headerText="Num_Expediente" filterBy="#{e.num_Expediente}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.num_Expediente}" />
 			</p:column>
 			
-			<p:column headerText="Activo" filterBy="#{e.activo}"
+			<p:column id="n" headerText="Activo" filterBy="#{e.activo}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.activo}" />
 			</p:column>
 			
-			<p:column headerText="Nota_Media" filterBy="#{e.nota_Media}"
+			<p:column id="o" headerText="Nota_Media" filterBy="#{e.nota_Media}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.nota_Media}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_Superados" filterBy="#{e.creditos_Superados}"
+			<p:column id="p" headerText="Creditos_Superados" filterBy="#{e.creditos_Superados}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_Superados}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_FB" filterBy="#{e.creditos_FB}"
+			<p:column id="q" headerText="Creditos_FB" filterBy="#{e.creditos_FB}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_FB}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_OB" filterBy="#{e.creditos_OB}"
+			<p:column id="r" headerText="Creditos_OB" filterBy="#{e.creditos_OB}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_OB}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_OP" filterBy="#{e.creditos_OP}"
+			<p:column id="s" headerText="Creditos_OP" filterBy="#{e.creditos_OP}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_OP}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_CF" filterBy="#{e.creditos_CF}"
+			<p:column id="t" headerText="Creditos_CF" filterBy="#{e.creditos_CF}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_CF}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_PE" filterBy="#{e.creditos_PE}"
+			<p:column id="u" headerText="Creditos_PE" filterBy="#{e.creditos_PE}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_PE}" />
 			</p:column>
 			
-			<p:column headerText="Creditos_TF" filterBy="#{e.creditos_TF}"
+			<p:column id="v" headerText="Creditos_TF" filterBy="#{e.creditos_TF}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{e.creditos_TF}" />
 			</p:column>
@@ -176,8 +176,8 @@
         </h:form>
 	 
 		
-	<div class="importarExpediente">
-			<h:button value="Importar Expediente" outcome="ImportarExpediente.xhtml" />
+	<div id="w" class="importarExpediente">
+			<h:button id="z" value="Importar Expediente" outcome="ImportarExpediente.xhtml" />
 	</div>
 		
 	 
