--- a/Grupo_L-war/src/main/webapp/LeerEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerEncuesta.xhtml
@@ -29,7 +29,7 @@
 	
 	<h1 class="titulo"> Encuestas </h1>
 	<ui:fragment rendered="#{not empty infoSesion.alumno}">	
-	<div class="izquierda"   >
+	<div id = "caja" class="izquierda"   >
 			<b>MIS DATOS </b><br></br><br></br> 
 			<a href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
 			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
@@ -41,7 +41,7 @@
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
 		
-		<div class="centro">
+		<div id= "tabla" class="centro">
 		
         <h:form id="encuesta">
             <p:commandButton value="Mostar" actionListener="#{encuesta.encuesta}" update="dtEncuesta" />
