--- a/Grupo_L-war/src/main/webapp/SolicitarCambioGrupo.xhtml
+++ b/Grupo_L-war/src/main/webapp/SolicitarCambioGrupo.xhtml
@@ -26,7 +26,7 @@
 	</h:form>
 	<h1 class="titulo"> SOLICITAR CAMBIO DE GRUPO </h1>
 
-	<div class="izquierda"   >
+	<div id = "caja" class="izquierda"   >
 			<b>MIS DATOS </b><br></br><br></br> 
 			<a href="LeerEncuesta.xhtml" style="text-decoration: none">Leer Encuesta</a><br></br>
 			<a href="LeerAsignaturaMatricula.xhtml" style="text-decoration: none">Leer Asignatura Matricula</a><br></br>
@@ -36,15 +36,15 @@
 			<a href="LeerAsignaturas.xhtml" style="text-decoration: none">Leer Asignatura</a><br></br> 
 			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
-		</div>
+	</div>
 
-	<div class="centro">
+	<div id = "tabla" class="centro">
 		
     <h:form id="desplegable">
         <a>Titulación:</a>
        <h:selectOneMenu id="titulacion" value="#{solicitar.t}">
        		<f:selectItem itemLabel="--Seleccione titulacion--" itemValue=""/>
-   			 <f:selectItems value="#{solicitar.todasTitulaciones}"
+   			 <f:selectItems id = "tit" value="#{solicitar.todasTitulaciones}"
    			 var="t" itemLabel="#{t.nombre}" itemValue="#{t.codigo}"/> 
    			 <f:ajax execute="desplegable" render="curso" ></f:ajax>  			  
 		</h:selectOneMenu>
@@ -54,7 +54,7 @@
 		<a>Curso:</a>		
 		<h:selectOneMenu id="curso" value="#{solicitar.curso}">
 			<f:selectItem itemLabel="--Seleccione curso--" itemValue=""/>
-   			 <f:selectItems value="#{solicitar.cursos}"/> 
+   			 <f:selectItems id = "curs" value="#{solicitar.cursos}"/> 
    			  <f:ajax execute="desplegable" render="letra" ></f:ajax>   			  
 		</h:selectOneMenu><br></br>		
 		<br></br>
@@ -63,7 +63,7 @@
 		<a>Grupo:</a>		
 		<h:selectOneMenu id="letra" value="#{solicitar.letra}">
 			<f:selectItem itemLabel="--Seleccione grupo--" itemValue=""/>
-   			 <f:selectItems value="#{solicitar.letras}"/> 
+   			 <f:selectItems id = "let" value="#{solicitar.letras}"/> 
    			 <f:ajax execute="desplegable" render="asignatura" ></f:ajax>   			  
 		</h:selectOneMenu><br></br>		
 		<br></br>
@@ -72,14 +72,14 @@
 		<a>Asignatura:</a>		
 		<h:selectOneMenu id="asignatura" value="#{solicitar.asig}">
 			<f:selectItem itemLabel="--Seleccione asignatura--" itemValue=""/>
-   			 <f:selectItems value="#{solicitar.asignaturas}"
+   			 <f:selectItems id="asig" value="#{solicitar.asignaturas}"
    			 var="a" itemLabel="#{a.nombre}" itemValue="#{a.referencia}"/>    			  
 		</h:selectOneMenu><br></br>		
 		<br></br>
 		
 		
-		<label for="asig">Motivo:</label>
-		<textarea name="comentarios" rows="10" cols="40" required="required" />
+		<label  for="asig">Motivo:</label>
+		<textarea id = "motivo" name="comentarios" rows="10" cols="40" required="required" />
 		
 		<br></br>
 		
