--- a/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
+++ b/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
@@ -44,12 +44,12 @@
             <div class="p-field p-col-12 p-md-4">
                 <p:outputLabel for="@next" value="Basic"/>
                 <p:selectOneMenu id="option" value="#{exportar.selectedOption}">
-                    <f:selectItem itemLabel="Titulaciones" itemValue=""/>
-                    <f:selectItem itemLabel="Ingeniería Informática" itemValue="1041"/>
-                    <f:selectItem itemLabel="Ingeniería del Software" itemValue="1042"/>
-                    <f:selectItem itemLabel="Ingeniería de Computadores" itemValue="1043"/>
-                    <f:selectItem itemLabel="Ingeniería de la Salud" itemValue="1056"/>
-                    <f:selectItem itemLabel="Ingeniería Informatica y Matemáticas" itemValue="1073"/>
+                    <f:selectItem  itemLabel="--Titulaciones--" itemValue=""/>
+                    <f:selectItem id="b" itemLabel="Ingeniería Informática" itemValue="1041"/>
+                    <f:selectItem id="c" itemLabel="Ingeniería del Software" itemValue="1042"/>
+                    <f:selectItem id="d" itemLabel="Ingeniería de Computadores" itemValue="1043"/>
+                    <f:selectItem id="e" itemLabel="Ingeniería de la Salud" itemValue="1056"/>
+                    <f:selectItem id="f" itemLabel="Ingeniería Informatica y Matemáticas" itemValue="1073"/>
                     <f:facet name="footer">
                         <p:divider styleClass="p-mt-0" />
                         <h:outputText value="5 options" style="font-weight:bold;"/>
@@ -60,7 +60,7 @@
 		
 		<br></br><br></br>
 		
-		<p:commandButton value="EXPORTAR" action="#{exportar.exDatos}"></p:commandButton> 
+		<p:commandButton id="exportar" value="EXPORTAR" action="#{exportar.exDatos}"/>
 		
 		<p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false"
               resizable="false">
@@ -68,7 +68,7 @@
     </p:dialog>
 
    
-        <p:commandButton value="Download" icon="pi pi-arrow-down" styleClass="ui-button-outlined">
+        <p:commandButton id="descarga" value="Download" icon="pi pi-arrow-down" styleClass="ui-button-outlined">
             <p:fileDownload value="#{fileDownloadView.file}"/>
         </p:commandButton>
 		
