--- a/Grupo_L-war/src/main/webapp/LeerEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerEncuesta.xhtml
@@ -48,17 +48,17 @@
 
 		<p:dataTable id="dtEncuesta" value="#{encuesta.encuesta}" var="enc">
 		
-			<p:column headerText="Número de expediente" filterBy="#{enc.EE.num_Expediente}"
+			<p:column id="a" headerText="Número de expediente" filterBy="#{enc.EE.num_Expediente}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{enc.EE.num_Expediente}" />
 			</p:column>
 			
-			<p:column headerText="Fecha de envío" filterBy="#{enc.fecha_De_Envio}"
+			<p:column id="b" headerText="Fecha de envío" filterBy="#{enc.fecha_De_Envio}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{enc.fecha_De_Envio}" />
 			</p:column>
 			
-			<p:column headerText="Grupos por asignaturas" filterBy="#{enc.gruposPorAsignaturas}"
+			<p:column id="c" headerText="Grupos por asignaturas" filterBy="#{enc.gruposPorAsignaturas}"
 				filterMatchMode="contains">
 				<p:outputLabel value="#{enc.gruposPorAsignaturas}" />
 			</p:column>
