--- a/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
@@ -113,7 +113,7 @@
 	
 	<ui:fragment rendered="#{not empty infoSesion.personal}">
 		
-		<h:form styleClass="centrado">
+		<h:form id="caja1" styleClass="centrado">
 	 	<div class="izquierdaCentro">
 			<b>Expedientes: </b> <br></br>
 		</div>
