--- a/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerMatricula.xhtml
@@ -89,10 +89,10 @@
 	</ui:fragment>
 
 	<ui:fragment rendered="#{not empty infoSesion.personal}">
-		<h:form styleClass="centrado">
+		<h:form id="caja1" styleClass="centrado">
 		
 			<div class="importarMatricula">
-				<h:button value="Importar Matricula"
+				<h:button id="impMat" value="Importar Matricula"
 					outcome="ImportarMatricula.xhtml" />
 			</div>
 			
@@ -100,42 +100,42 @@
 		
 			<p:dataTable id="dtGrupos" value="#{matriculaBB.matriculas}" var="m">
 	
-				<p:column headerText="Curso Academico" filterBy="#{m.curso_Academico}"
+				<p:column id="i" headerText="Curso Academico" filterBy="#{m.curso_Academico}"
 					filterMatchMode="contains">
 					<p:outputLabel value="#{m.curso_Academico}" />
 				</p:column>
 	
-				<p:column headerText="Estado" filterBy="#{m.estado}"
+				<p:column id="j" headerText="Estado" filterBy="#{m.estado}"
 					filterMatchMode="contains">
 					<p:outputLabel value="#{m.estado}" />
 				</p:column>
 	
-				<p:column headerText="Numero Archivo" filterBy="#{m.num_Archivo}"
+				<p:column id="k" headerText="Numero Archivo" filterBy="#{m.num_Archivo}"
 					filterMatchMode="contains">
 					<p:outputLabel value="#{m.num_Archivo}" />
 				</p:column>
 	
-				<p:column headerText="Turno Preferente" filterBy="#{m.turno_Preferente}"
+				<p:column id="l" headerText="Turno Preferente" filterBy="#{m.turno_Preferente}"
 					filterMatchMode="contains">
 					<p:outputLabel value="#{m.turno_Preferente}" />
 				</p:column>
 	
-				<p:column headerText="Fecha de matricula" filterBy="#{m.fecha_De_Matricula}"
+				<p:column id="m" headerText="Fecha de matricula" filterBy="#{m.fecha_De_Matricula}"
 					 filterMatchMode="contains">
 					<p:outputLabel value="#{m.fecha_De_Matricula}" />
 				</p:column>
 	
-				<p:column headerText="Nuevo Ingreso" filterBy="#{m.nuevo_Ingreso}"
+				<p:column id="n" headerText="Nuevo Ingreso" filterBy="#{m.nuevo_Ingreso}"
 					filterMatchMode="contains">
 					<p:outputLabel value="#{m.nuevo_Ingreso}" />
 				</p:column>
 	
-				<p:column headerText="Listado Asignaturas" filterBy="#{m.a}"
+				<p:column id="o" headerText="Listado Asignaturas" filterBy="#{m.a}"
 					filterMatchMode="contains">
 					<p:outputLabel value="#{m.a}" />
 				</p:column>
 	
-				<p:column headerText="Expediente" filterBy="#{m.EM.num_Expediente}"
+				<p:column id="p" headerText="Expediente" filterBy="#{m.EM.num_Expediente}"
 					filterMatchMode="contains">
 					<p:outputLabel value="#{m.EM.num_Expediente}" />
 				</p:column>
