--- a/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
+++ b/Grupo_L-war/src/main/webapp/RellenarEncuesta.xhtml
@@ -15,7 +15,7 @@
 
 <h:body>
 	
-	<div class="inicio"><p>Hola, <h:outputText value="#{infoSesion.alumno.nombre}"/>.</p></div>
+	<div class="inicio"><p id="nombre">Hola, <h:outputText value="#{infoSesion.alumno.nombre}"/>.</p></div>
 	
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
 	<h:form>
@@ -35,34 +35,38 @@
 			<a href="LeerClase.xhtml" style="text-decoration: none">Leer Clase</a><br></br> 
 			<a href="LeerExpediente.xhtml" style="text-decoration: none">Leer Expediente</a>
 		</div>
-<h:form>
+<h:form id="formu">
 	<div class="centro">
 	
 		<label for="curso">Primer curso:</label>
-		<h:selectOneMenu value="#{encuesta.letra}">
+		<h:selectOneMenu id="a" value="#{encuesta.letra}">
+			<f:selectItem itemLabel="--Seleccione titulacion--" itemValue=""/>
     		<f:selectItems value="#{encuesta.letraPrimero}" />
 		</h:selectOneMenu>
 		<br></br><br></br>		
 		
 		<label for="curso">Segundo curso:</label>
-		<h:selectOneMenu value="#{encuesta.letra}">
+		<h:selectOneMenu id="b" value="#{encuesta.letra}">
+			<f:selectItem itemLabel="--Seleccione titulacion--" itemValue=""/>
     		<f:selectItems value="#{encuesta.letraSegundo}" />
 		</h:selectOneMenu>
 		<br></br><br></br>		
 		
 		<label for="curso">Tercero curso:</label>
-		<h:selectOneMenu value="#{encuesta.letra}">
+		<h:selectOneMenu id="c" value="#{encuesta.letra}">
+			<f:selectItem itemLabel="--Seleccione titulacion--" itemValue=""/>
     		<f:selectItems value="#{encuesta.letraTercero}" />
 		</h:selectOneMenu>
 		<br></br><br></br>
 		
 		<label for="curso">Cuarto curso:</label>
-		<h:selectOneMenu value="#{encuesta.letra}">
+		<h:selectOneMenu id="d" value="#{encuesta.letra}">
+			<f:selectItem itemLabel="--Seleccione titulacion--" itemValue=""/>
     		<f:selectItems value="#{encuesta.letraCuarto}" />
 		</h:selectOneMenu>
 		<br></br><br></br>
 
-		<p:commandButton value="Enviar" action="#{encuesta.aceptarEncuesta}"></p:commandButton> 
+		<p:commandButton id="env" value="Enviar" action="#{encuesta.aceptarEncuesta}"/>
 		<a>  </a>
 		<p:commandButton id="cancelar" value="Cancelar" action="#{encuesta.atras}" /> 
 		
