--- a/Grupo_L-war/src/main/webapp/CrearGrupo.xhtml
+++ b/Grupo_L-war/src/main/webapp/CrearGrupo.xhtml
@@ -24,7 +24,7 @@
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
 	
 		<h1 class="titulo"> Crear Grupo </h1>
-				<h:form>
+				<h:form id="caja">
             	<div class="centrado">
 				<h:panelGrid columns="4">
 				
