--- a/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerTitulacion.xhtml
@@ -51,17 +51,17 @@
 		
 			<p:column id="a" headerText="Codigo" filterBy="#{t.codigo}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{t.codigo}" />
+				<p:outputLabel id="aa" value="#{t.codigo}" />
 			</p:column>
 			
 			<p:column id="b" headerText="Nombre" filterBy="#{t.nombre}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{t.nombre}" />
+				<p:outputLabel id="bb" value="#{t.nombre}" />
 			</p:column>
 			
 			<p:column id="c" headerText="Créditos" filterBy="#{t.creditos}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{t.creditos}" />
+				<p:outputLabel id="cc" value="#{t.creditos}" />
 			</p:column>
 	 	</p:dataTable>
         </h:form>
@@ -81,17 +81,17 @@
 		
 			<p:column id="d" headerText="Codigo" filterBy="#{t.codigo}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{t.codigo}" />
+				<p:outputLabel id="dd" value="#{t.codigo}" />
 			</p:column>
 			
 			<p:column id="e" headerText="Nombre" filterBy="#{t.nombre}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{t.nombre}" />
+				<p:outputLabel id="ee" value="#{t.nombre}" />
 			</p:column>
 			
 			<p:column id="f" headerText="Créditos" filterBy="#{t.creditos}"
 				filterMatchMode="contains">
-				<p:outputLabel value="#{t.creditos}" />
+				<p:outputLabel id="ff" value="#{t.creditos}" />
 			</p:column>
 	 	</p:dataTable>
         </h:form>
