--- a/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
@@ -127,7 +127,7 @@
 	</ui:fragment>
 
 	<ui:fragment rendered="#{not empty infoSesion.personal}">
-		<h:form>
+		<h:form id="fondo">
 
 			<h:button id="crear" value="Crear alumno" outcome="CrearAlumno.xhtml" />
 			<br></br>
