--- a/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerExpediente.xhtml
@@ -152,7 +152,7 @@
 
 				<p:column id="m" headerText="Num_Expediente"
 					filterBy="#{e.num_Expediente}" filterMatchMode="contains">
-					<p:outputLabel value="#{e.num_Expediente}" />
+					<p:outputLabel id="aa" value="#{e.num_Expediente}" />
 				</p:column>
 
 				<p:column id="n" headerText="Activo" filterBy="#{e.activo}"
