--- a/Grupo_L-war/src/main/webapp/Login.xhtml
+++ b/Grupo_L-war/src/main/webapp/Login.xhtml
@@ -19,7 +19,7 @@
 	<div class="izquierda"> <img src="resources/imagenes/logoFLM.png" width="400" /> </div>
 
 	<div class="centro">
-		<h:form>
+		<h:form id="fondo">
 			<img src="resources/imagenes/uma.png" width="200" />
 
 			<h:panelGrid columns="3">
