--- a/Grupo_L-war/src/main/webapp/ImportarTitulacion.xhtml
+++ b/Grupo_L-war/src/main/webapp/ImportarTitulacion.xhtml
@@ -25,9 +25,9 @@
 	<h1 class="titulo"> IMPORTAR TITULACION </h1>
 
 	<div class="centrado">
-	    <h:form enctype="multipart/form-data">
+	    <h:form id="form" enctype="multipart/form-data">
 			 <p:growl id="messages" showDetail="true"/>
-       		 <p:fileUpload mode="advanced"
+       		 <p:fileUpload id="file" mode="advanced"
                       multiple="false"
                       sizeLimit="10240000" allowTypes="/(\.|\/)(xlsx)$/"
                       invalidSizeMessage="Maximum file size allowed is 10 MB"
