--- a/Grupo_L-war/src/main/webapp/LeerGrupo.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerGrupo.xhtml
@@ -39,47 +39,47 @@
 			
 				<p:column id="ID" headerText="ID" filterBy="#{g.ID}"
 					filterMatchMode="contains">
-					<p:outputLabel value="#{g.ID}" />
+					<p:outputLabel id="id" value="#{g.ID}" />
 				</p:column>
 	
 				<p:column id="curso" headerText="Curso" filterBy="#{g.curso}"
 					filterMatchMode="contains">
-					<p:outputLabel value="#{g.curso}" />
+					<p:outputLabel id="curs" value="#{g.curso}" />
 				</p:column>
 	
 				<p:column id="letra" headerText="Letra" filterBy="#{g.letra}"
 					filterMatchMode="contains">
-					<p:outputLabel value="#{g.letra}" />
+					<p:outputLabel id="letr" value="#{g.letra}" />
 				</p:column>
 	
 				<p:column id="turno" headerText="Turno" filterBy="#{g.turno_Maniana_Tarde}"
 					filterMatchMode="contains">
-					<p:outputLabel value="#{g.turno_Maniana_Tarde}" />
+					<p:outputLabel id="turn" value="#{g.turno_Maniana_Tarde}" />
 				</p:column>
 	
 				<p:column id="ingles" headerText="Ingles"
 					filterBy="#{g.ingles}" filterMatchMode="contains">
-					<p:outputLabel value="#{g.ingles}" />
+					<p:outputLabel id="ingl" value="#{g.ingles}" />
 				</p:column>
 	
 				<p:column id="visible" headerText="Visible" filterBy="#{g.visible}"
 					filterMatchMode="contains">
-					<p:outputLabel value="#{g.visible}" />
+					<p:outputLabel id="visibl" value="#{g.visible}" />
 				</p:column>
 	
 				<p:column id="asignar" headerText="Asignar" filterBy="#{g.asignar}"
 					filterMatchMode="contains">
-					<p:outputLabel value="#{g.asignar}" />
+					<p:outputLabel id="asig" value="#{g.asignar}" />
 				</p:column>
 	
 				<p:column id="plazas" headerText="Plazas" filterBy="#{g.plazas}"
 					filterMatchMode="contains">
-					<p:outputLabel value="#{g.plazas}" />
+					<p:outputLabel id="plaz" value="#{g.plazas}" />
 				</p:column>
 				
 				<p:column id="tgCodigo" headerText="Titulacion" filterBy="#{g.TG.codigo}"
 					filterMatchMode="contains">
-					<p:outputLabel value="#{g.TG.codigo}" />
+					<p:outputLabel id="tg" value="#{g.TG.codigo}" />
 				</p:column>
 	
 				<p:column headerText="CURSO" sortBy="#{g.curso}">
