--- a/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
+++ b/Grupo_L-war/src/main/webapp/LeerAlumnos.xhtml
@@ -202,11 +202,11 @@
 					</p:cellEditor>
 				</p:column>
 
-				<p:column id="m" headerText="Eliminar">
+				<p:column id="elim" headerText="Eliminar">
 					<h:commandButton id="eliminar" value="Eliminar"
 						action="#{alumnoBB.eliminar(a)}" />
 				</p:column>
-				<p:column id="n" headerText="Modificar">
+				<p:column id="mod" headerText="Modificar">
 					<h:commandButton id="Modificar" value="Modificar"
 						action="#{alumnoBB.actualizar(a)}" />
 				</p:column>
