--- a/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
+++ b/Grupo_L-war/src/main/webapp/ExportarDatos.xhtml
@@ -36,13 +36,13 @@
 	<div class="inicio"> <h:button value="INICIO" outcome="Principal.xhtml" /> </div>
 
 	<h1 class="titulo"> FLM-SECRETARIA </h1>
-	<h:form>
+	<h:form id="caja">
 	<div class="centrado">
 		<b>Exportar Datos</b> <br></br><br></br>
 		
-        <div class="ui-fluid p-formgrid p-grid">
-            <div class="p-field p-col-12 p-md-4">
-                <p:outputLabel for="@next" value="Basic"/>
+        <div id="div1" class="ui-fluid p-formgrid p-grid">
+            <div id="div2" class="p-field p-col-12 p-md-4">
+                <p:outputLabel id="lista" for="@next" value="Basic"/>
                 <p:selectOneMenu id="option" value="#{exportar.selectedOption}">
                     <f:selectItem  itemLabel="--Titulaciones--" itemValue=""/>
                     <f:selectItem id="b" itemLabel="Ingeniería Informática" itemValue="1041"/>
@@ -62,14 +62,12 @@
 		
 		<p:commandButton id="exportar" value="EXPORTAR" action="#{exportar.exDatos}"/>
 		
-		<p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false"
-              resizable="false">
+		<p:dialog id="dialog" modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false" resizable="false">
               <i class="pi pi-spinner pi-spin" style="font-size:3rem"></i>
-    </p:dialog>
-
+    	</p:dialog>
    
         <p:commandButton id="descarga" value="Download" icon="pi pi-arrow-down" styleClass="ui-button-outlined">
-            <p:fileDownload value="#{fileDownloadView.file}"/>
+            <p:fileDownload id="descargas" value="#{fileDownloadView.file}"/>
         </p:commandButton>
 		
 		</div>
